--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Meu portfólio</title>
+</head>
+<body>
+    <img src="img/avatar-perfil.png" alt="avatar de andre e nicolas" srcset="">
+    <p>somos andre e nicolas_</p>
+    <h1>somos estudandes de programação</h1>
+    <p>nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
+    <p>nossas habilidades</p>
+    <div>
+            <p>andar de moto</p>
+            <p>jogar futebol</p>
+            <p>jogar beach tennis</p>
+            <p>trabalhar muito lerdo</p>
+    </div>
+</body>
+</html>
