--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Meu portfólio</title>
 </head>
 <body>
-    <img src="img/avatar-perfil.png" alt="avatar de andre e nicolas" srcset="">
+    <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png" alt="avatar de andre e nicolas" srcset="">
     <p>somos andre e nicolas_</p>
     <h1>somos estudandes de programação</h1>
     <p>nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
