--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png" alt="avatar de andre e nicolas" srcset="">
-    <p>somos andre e nicolas_</p>
-    <h1>somos estudandes de programação</h1>
-    <p>nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
-    <p>nossas habilidades</p>
+    <p>Somos Andre e Nicolas</p>
+    <h1>Somos estudandes de programação</h1>
+    <p>Nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
+    <p>Nossas habilidades</p>
     <div>
-            <p>andar de moto</p>
-            <p>jogar futebol</p>
-            <p>jogar beach tennis</p>
-            <p>trabalhar muito lerdo</p>
+            <p>Andar de moto</p>
+            <p>Jogar futebol</p>
+            <p>Jogar beach tennis</p>
+            <p>Trabalhar muito lerdo</p>
     </div>
 </body>
 </html>
