--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
 </head>
+
 <body>
-    <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png" alt="avatar de andre e nicolas" srcset="">
-    <p>Somos Andre e Nicolas</p>
-    <h1>Somos estudandes de programação</h1>
-    <p>Nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
-    <p>Nossas habilidades</p>
-    <div>
+    <header>class="container"
+        <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png"
+            alt="avatar de andre e nicolas" srcset="">
+        <p>Somos Andre e Nicolas</p>
+        <h1>Somos estudandes de programação</h1>
+        <p>Nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
+        <p>Nossas habilidades</p>
+        <div>
             <p>Andar de moto</p>
             <p>Jogar futebol</p>
             <p>Jogar beach tennis</p>
             <p>Trabalhar muito lerdo</p>
-    </div>
+        </div>
+        <header>
 </body>
+
 </html>
