--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header><class="container">
+    <header class="container">
         <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png"
             alt="avatar de andre e nicolas" srcset="">
         <p>Somos Andre e Nicolas</p>
@@ -22,7 +22,7 @@
             <p>Jogar beach tennis</p>
             <p>Trabalhar muito lerdo</p>
         </div>
-        <header>
+    </header>
 </body>
 
 </html>
