--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="container">
+    <header class="container text-center">
         <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png"
             alt="avatar de andre e nicolas" srcset="">
         <p>Somos Andre e Nicolas</p>
