--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="container text-center">
         <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png"
-            alt="avatar de andre e nicolas" srcset="">
+            alt="avatar de andre e nicolas"  class="rounded-circle"   srcset="">
         <p>Somos Andre e Nicolas</p>
         <h1>Somos estudandes de programação</h1>
         <p>Nós estudamos no colégio henrrique denck no 2 ano do ensino médio moramos no interior de Ipiranga </p>
