--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="container text-center">
         <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png" alt="avatar de nicolas e andre" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">somos andre e nicolas_</p>
+        <p class="lead">somos andre e nicolas</p>
         <h1>somos estudantes</h1>
         <p>Somos estudantes do colegio henrrique denck trabalhamos na lavoura e madeira</p>
         <p>Minhas habilidades</p>
@@ -24,6 +24,23 @@
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <main class="container">
+        <h2>Meus projetos</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
