--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/img/Captura de tela_2025-03-13_08-35-35.png" class="card-img-top" alt="projeto1">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">veja o projeto</a>
                     </div>
                   </div>
             </div>
