--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="/img/Captura de tela_2025-03-13_08-35-35.png" class="card-img-top" alt="projeto1">
+                    <img src="img/moto.png" class="card-img-top" alt="projeto1">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">site sobre tudo o que precisa para saber de moto </h5>
+                      <p class="card-text">acesse olink e veja o site de motos para adiquirir conhecimento com moto</p>
                       <a href="#" class="btn btn-primary">veja o projeto</a>
                     </div>
                   </div>
