--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div id="acessibilidade"class="menu-acessibilidade"
+       <button id="aumentar-fonte" class="btn btn-primary fw-bold">A +</button>
+       <button id="diminuir-fonte" class="btn btn-primary fw-bold">A -</button>
+</div>
     <header class="container text-center">
         <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png" alt="avatar de nicolas e andre" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">somos andre e nicolas</p>
@@ -24,6 +28,7 @@
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
+    <script arc="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <main class="container">
         <h2>Meus projetos</h2>
