--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    
+
                 <!-- Projeto 2 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                        <img src="img/jogo do troco.png" class="card-img-top" alt="imagem do jpgp dp troco">
                         <div class="card-body">
-                            <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                            <h5 class="card-title">Decidindo o Futur: Uma Jornada Interativa sobre a Inteligência
                                 Artificial</h5>
                             <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
                                 impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
@@ -68,7 +68,7 @@
                 <!-- Projeto 3 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                        <img src="img/minha janela.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                         <div class="card-body">
                             <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
                             </h5>
