--- a/index.html
+++ b/index.html
@@ -54,12 +54,9 @@
                     <div class="card">
                         <img src="img/jogo do troco.png" class="card-img-top" alt="imagem do jpgp dp troco">
                         <div class="card-body">
-                            <h5 class="card-title">Decidindo o Futur: Uma Jornada Interativa sobre a Inteligência
+                            <h5 class="card-title">jogo do troco: Um jogo para aprender sobre troco
                                 Artificial</h5>
-                            <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                                impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                                pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                                futuro da IA.</p>
+                            <p class="card-text">este jogo e baseado em um mercado que treina devolver troco para as pessoas.</p>
                             <button type="button" class="btn btn-link">Veja o projeto</button>
                         </div>
                     </div>
@@ -68,9 +65,9 @@
                 <!-- Projeto 3 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="img/minha janela.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                        <img src="img/minha janela.png" class="card-img-top" alt="Imagem do projeto de minha janela">
                         <div class="card-body">
-                            <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                            <h5 class="card-title">Explorando o universo: Uma Aventura Interativa em Astronomia com Scratch
                             </h5>
                             <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
                                 astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
