--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="img/jogo do troco.png" class="card-img-top" alt="imagem do jpgp dp troco">
                         <div class="card-body">
                             <h5 class="card-title">jogo do troco: Um jogo para aprender sobre troco
-                                Artificial</h5>
+                                </h5>
                             <p class="card-text">este jogo e baseado em um mercado que treina devolver troco para as pessoas.</p>
                             <button type="button" class="btn btn-link">Veja o projeto</button>
                         </div>
@@ -69,8 +69,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Explorando o universo: Uma Aventura Interativa em Astronomia com Scratch
                             </h5>
-                            <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                                astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
+                            <p class="card-text">Este projeto minha janela cria uma experiência interativa educativa sobre
+                                as paisagem, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
                                 forma da Terra através de cenários dinâmicos e diálogos informativos.
                             </p>
                             <button type="button" class="btn btn-link">Veja o projeto</button>
