--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="img/pngtree-mascot-pilot-air-force-officer-profile-avatar-cartoon-png-image_12599795.png" alt="avatar de nicolas e andre" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">somos andre e nicolas</p>
         <h1>somos estudantes</h1>
-        <p>Somos estudantes do colegio henrrique denck trabalhamos na lavoura e madeira</p>
+        <p>Somos estudantes do colegio henrique denck trabalhamos na lavoura e madeira</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
