--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <!-- Projeto 2 -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card style="width: 18rem;">
                         <img src="img/jogo do troco.png" class="card-img-top" alt="imagem do jpgp dp troco">
                         <div class="card-body">
                             <h5 class="card-title">jogo do troco: Um jogo para aprender sobre troco
@@ -63,7 +63,7 @@
     
                 <!-- Projeto 3 -->
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card style="width: 18rem;lll">
                         <img src="img/minha janela.png" class="card-img-top" alt="Imagem do projeto de minha janela">
                         <div class="card-body">
                             <h5 class="card-title">Explorando o universo: Uma Aventura Interativa em Astronomia com Scratch
