--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
            <!-- Projeto 1 -->
            <div class="col-md-4">
             <div class="card">
-                <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <img src="img/moto.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                 <div class="card-body">
-                    <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                    <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                        favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                        na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                        externas do Google Fonts.
+                    <h5 class="card-title">site sobre tudo o que precisa para saber de moto</h5>
+                    <p class="card-text">acesse o link e veja o site de motos para adiquirir conhecimento com moto.
                     </p>
                     <button type="button" class="btn btn-link">Veja o projeto</button>
                 </div>
@@ -51,14 +48,11 @@
         <!-- Projeto 2 -->
         <div class="col-md-4">
             <div class="card">
-                <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <img src="img/jogo do troco.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                 <div class="card-body">
-                    <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                        Artificial</h5>
-                    <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                        impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                        pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                        futuro da IA.</p>
+                    <h5 class="card-title"></h5>
+                    <p class="cardjogo do troco: Um jogo para aprender sobre troco
+                    -text">este jogo e baseado em um mercado que treina devolver troco para as pessoas.</p>
                     <button type="button" class="btn btn-link">Veja o projeto</button>
                 </div>
             </div>
@@ -67,13 +61,11 @@
         <!-- Projeto 3 -->
         <div class="col-md-4">
             <div class="card">
-                <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <img src="img/minha janela.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                 <div class="card-body">
-                    <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                    <h5 class="card-title">Explorando o universo: Uma Aventura Interativa em Astronomia com Scratch
                     </h5>
-                    <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                        astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                        forma da Terra através de cenários dinâmicos e diálogos informativos.
+                    <p class="card-text">Este projeto minha janela cria uma experiência interativa educativa sobre as paisagem, permitindo aos usuários explorar informações sobre constelações, eclipses, e a forma da Terra através de cenários dinâmicos e diálogos informativos
                     </p>
                     <button type="button" class="btn btn-link">Veja o projeto</button>
                 </div>
