--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <main class="container">
         <h2>Meus projetos</h2>
+        <div class="row">
            <!-- Projeto 1 -->
            <div class="col-md-4">
             <div class="card">
